--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,3 +17,4 @@ jobs:
         with:
           release-type: simple
           package-name: obsidian-template
+          changelog-types: '[{"type":"feat","section":"Changed","hidden":false},{"type":"fix","section":"Changed","hidden":false},{"type":"chore","section":"Added","hidden":false},{"type":"docs","section":"Added","hidden":false}]'
