--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,4 +23,4 @@ repos:
     hooks:
       - id: conventional-pre-commit
         stages: [commit-msg]
-        args: [fix, feat, chore, docs, refactor, test]
+        args: [fix, feat, chore, docs, feat!, chore!, fix!]
