chore: Update plugins, add theme plugin, add execute code plugin

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,5 +2,7 @@
   "accentColor": "",
   "interfaceFontFamily": "Iosevka Nerd Font Mono,IosevkaTerm Nerd Font Mono",
   "textFontFamily": "IosevkaTerm Nerd Font Mono",
-  "nativeMenus": false
+  "nativeMenus": false,
+  "theme": "obsidian",
+  "cssTheme": "Minimal"
 }
