--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ exclude: '.obsidian/.*'
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v4.5.0
     hooks:
       - id: check-yaml
       - id: end-of-file-fixer
@@ -18,9 +18,17 @@ repos:
       - id: double-quote-string-fixer
       - id: check-executables-have-shebangs
 
-  - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: v2.4.0
+  - repo: https://github.com/commitizen-tools/commitizen
+    rev: 3.12.0
     hooks:
-      - id: conventional-pre-commit
+      - id: commitizen
         stages: [commit-msg]
-        args: [fix, feat, chore, docs, feat!, chore!, fix!]
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.37.0
+    hooks:
+      - id: markdownlint
+        args:
+          - --config
+          - .markdownlint.yaml
+          - --fix
