--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,6 @@
 {
   "alwaysUpdateLinks": true,
-  "showLineNumber": true
+  "showLineNumber": true,
+  "useMarkdownLinks": true,
+  "trashOption": "local"
 }
