--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
       - id: check-executables-have-shebangs
 
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v3.16.0
+    rev: v3.20.0
     hooks:
       - id: commitizen
         stages: [commit-msg]
@@ -32,3 +32,8 @@ repos:
           - --config
           - .markdownlint.yaml
           - --fix
+        exclude: |
+          (?x)^(
+              CHANGELOG.md |
+              ^.*\.excalidraw.md
+          )$
